modified:   .vscode/settings.json 	modified:   package-lock.json 	modified:   public/index.html 	modified:   src/assets/css/style.css 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/HelveticaNeueW0187HvCnObl.otf 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/HelveticaNeueW0187HvCnObl.ttf 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/helvetica_neue_w01_87_hv_cn_obl-webfont.woff 	new file:   src/assets/fonts/HelveticaNeueW0187HvCnObl/helvetica_neue_w01_87_hv_cn_obl-webfont.woff2 	modified:   src/components/Manager/HomeList.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "files.autoSave": "onFocusChange"
+  "files.autoSave": "afterDelay",
+  "editor.formatOnSaveMode": "modifications",
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
