--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^4.7.1",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
