--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-tools": "^11.19.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
