modified:   .vscode/settings.json 	modified:   src/assets/css/style.css 	modified:   src/components/Manager/HomeBlock.js 	modified:   src/components/Manager/HomeList.js 	modified:   src/components/Navs/NavBar.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "editor.formatOnSaveMode": "modifications",
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
-  "editor.defaultFormatter": "SimonSiefke.prettier-vscode",
+  "editor.defaultFormatter": "vscode.typescript-language-features",
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
