--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "nodemailer": "^6.8.0",
