modified:   .vscode/settings.json 	modified:   src/assets/css/style.css 	modified:   src/components/Manager/ClientTable.js 	modified:   src/components/Manager/NewTask.js 	modified:   src/components/Manager/NotificationFunctions.js 	modified:   src/components/Manager/TeammateTable.js 	modified:   src/components/TeamMate/Home.js 	modified:   src/components/TeamMate/Notifications.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "git.ignoreLimitWarning": true,
-  "editor.formatOnType": true
+  "editor.formatOnType": true,
+  "[css]": {
+    "editor.defaultFormatter": "SimonSiefke.prettier-vscode"
+  }
 }
