--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase-tools": "^11.19.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.2",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
